infra/k8s-prod/digitalocean/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 16k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "16k"
    nginx.ingress.kubernetes.io/websocket-services: "booking-srv,notification-srv"
spec:
  tls:
    - hosts:
      - roadmappro.site
      secretName: letsencrypt-nginx
  rules:
    - host: roadmappro.site
      http:
        paths:
          - path: /api/payments/webhook
            pathType: Prefix  
            backend:
              service:
                name: payment-srv
                port:
                  number: 3005 
          - path: /api/?(.*) 
            pathType: ImplementationSpecific  
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 4001
          - path: /booking-socket/?(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-srv
                port:
                  number: 3004     
          - path: /notification-socket/?(.*)  
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-srv
                port:
                  number: 3006
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: client-srv 
                port:
                  number: 5173
